--- a/todo.txt
+++ b/todo.txt
@@ -15,12 +15,15 @@
 １番目：音楽の再生
 必要な要素
 ・再生ボタン
-・答え（csvから読み込む）隠すのか（zoomに画面共有？）
+・答え（csvから読み込む）隠すのか（zoomに画面共有？）答
 ・問題の切り替え
 ・ジャンル
 
 ２番目：班選択・早押しボタンを押す（まあまあ完成）
-javascript 
+時間があれば細かいところを直す
+
+３番目：曲が止まる
+早押しボタンを押したら、
 
 
 
